<resources>
    <string name="app_name">KOT messenger</string>

    <string name="input_in_chat">Write a message</string>
    <string name="send_button_description">Send button</string>
    <string name="default_opponent_name">Rose</string>
    <string name="default_message_in_chat">How are you doing? This is a long message that should probably wrap.</string>
    <string name="default_name">Mary</string>
    <string name="default_icon_image">icon</string>
    <string name="default_message">hi how r u?</string>
    <string name="settings_button">settings_button</string>
    <string name="arrow_back">arrow back</string>

</resources>
