<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:background="@drawable/dialogue_adapter"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/dialogueImage"
        android:contentDescription="@string/default_icon_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:background="@drawable/circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/dialogueImage"
        android:layout_alignTop="@+id/dialogueImage"
        android:text="@string/default_name"
        android:textSize="21sp"
        android:id="@+id/name"
        android:textColor="#CCCACA"/>

    <TextView
        android:id="@+id/lastMessage"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@+id/dialogueImage"
        android:textColor="#CCCACA"
        android:textSize="17sp"
        android:text="@string/default_message" />


</RelativeLayout>