<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:clipToPadding="false"
    android:focusableInTouchMode="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chatHotBar"
        android:orientation="horizontal"
        android:background="@drawable/hot_bar_background"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/arrowBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_back"
                android:contentDescription="@string/arrow_back"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/arrowBackButton"
                android:layout_toLeftOf="@+id/recoverPersonConnection"
                android:id="@+id/name" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recoverPersonConnection"
                android:background="@drawable/recover_person"
                android:layout_alignParentRight="true" />


         </RelativeLayout>


    </LinearLayout>


    <ListView
        android:id="@+id/messages_view"
        android:layout_below="@+id/chatHotBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendMessage"
        android:clickable="false"
        android:divider="#fff"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_in_chat"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sendButton"
            android:layout_alignBottom="@+id/sendButton"
            android:text=""
            android:inputType="textMultiLine"/>

        <ImageButton
            android:contentDescription="@string/send_button_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/send_icon"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            android:id="@+id/sendButton"/>



</RelativeLayout>
